# godeno

./: .gitignore  Cargo.toml  LICENSE  README.md  deno.js  main.go  mod.ts
.github/workflows/: build.yml  release.yml
examples/: hello.ts
glue/: lib.rs
go_loader/: lib.rs
go_plugin/: constants.ts  dispatch.ts  mod.ts  open_plugin.ts  os.ts  types.ts
